--- a/frontend/showpage-client/src/components/button/Button.css
+++ b/frontend/showpage-client/src/components/button/Button.css
@@ -14,7 +14,7 @@
     padding: 8px 20px;
     transition: all 0.3s ease-out;
     background: #fff;
-    color: #6568f4;
+    color: #6568F4;
     transition: 250ms;
 }
 
@@ -38,7 +38,7 @@
     color: #fff;
 }
 
-.btn--large {
+.btn-large {
     padding: 12px 26px;
     border-radius: 4px;
     font-size: 20px;
