--- a/frontend/showpage-client/src/components/navbar/NavBar.css
+++ b/frontend/showpage-client/src/components/navbar/NavBar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110,94,254) 0%, rgba(73,63,252,1) 100%);
+    background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73,63,252,1) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -43,7 +43,7 @@
 }
 
 .fa-bars {
-    color: white;
+    color: #fff;
 }
 
 .nav-links-mobile {
@@ -119,21 +119,20 @@
         padding: 1.5rem;
         margin: 2rem auto;
         border-radius: 4px;
-        width: 80px;
+        width: 80%;
         background: #4ad9e4;
         text-decoration: none;
         color: #fff;
-        font: 1.5rem;
+        font-size: 1.5rem;
     }
 
     .nav-links-mobile:hover {
         background: #fff;
-        color: #6568f4;
+        color: #6568F4;
         transition: 250ms;
     }
 
     Button {
         display: none;
     }
-
 }
