fixed hamburger positioning

--- a/frontend/showpage-client/src/components/navbar/NavBar.css
+++ b/frontend/showpage-client/src/components/navbar/NavBar.css
@@ -52,6 +52,12 @@
 
 .menu-icon {
     display: none;
+    position: absolute;
+    top: 10px;
+    
+    z-index: 20;
+    width: 26px;
+    height: 38px
 }
 
 @media screen and (max-width: 960px) {
