--- a/frontend/showpage-client/src/components/navbar/NavBar.css
+++ b/frontend/showpage-client/src/components/navbar/NavBar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73,63,252,1) 100%);
+    background: linear-gradient(90deg, rgb(44, 43, 54) 0%, rgb(64, 60, 146) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -126,7 +126,7 @@
         margin: 2rem auto;
         border-radius: 4px;
         width: 80%;
-        background: #4ad9e4;
+        background: #927be2;
         text-decoration: none;
         color: #fff;
         font-size: 1.5rem;
