--- a/frontend/showpage-client/src/components/Internal.css
+++ b/frontend/showpage-client/src/components/Internal.css
@@ -20,7 +20,7 @@
 }
 
 .email-dec a {
-    color:rgb(189, 132, 235);
+    color: rgb(110, 94, 254);
     text-decoration: none;
 }
 
@@ -73,7 +73,7 @@
 
 .each-message {
     padding: 30px 30px 50px 30px;
-    background: linear-gradient(150deg, rgb(138, 123, 204) 0%, rgb(138, 138, 153) 100%);
+    background: linear-gradient(90deg,rgb(64, 60, 146) -30%, rgb(44, 43, 54) 100%);
     border-style: outset;
     border-top: 12px solid rgb(240, 235, 233);
     border-right: 12px solid rgb(146, 145, 145);
@@ -95,7 +95,7 @@
 
 .sub-btn {
     width: 100%;
-    background-color:  #a87be2;
+    background-color:  #7046a7;
     color: white;
     padding: 16px 120px;
     margin: 18px 80px, 18px, 80px;
@@ -106,7 +106,7 @@
 
 .sub-btn:hover {
     color: white;
-    background-color:  #946cc7;
+    background-color: rgb(64, 60, 146);
 }
 
 /* END FORM SUBMIT BUTTON */
