--- a/frontend/showpage-client/src/slider/Slider.css
+++ b/frontend/showpage-client/src/slider/Slider.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 50px;
 }
 
 .image {
@@ -17,7 +18,7 @@
     top: 50%;
     right: 32px;
     font-size: 3rem;
-    color: black;
+    color: #927be2;
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -28,7 +29,7 @@
     top: 50%;
     left: 32px;
     font-size: 3rem;
-    color: black;
+    color: #927be2;
     z-index: 10;
     cursor: pointer;
     user-select: none;
