--- a/frontend/showpage-client/src/slider/Slider.css
+++ b/frontend/showpage-client/src/slider/Slider.css
@@ -8,14 +8,14 @@
 }
 
 .image {
-    width: 600px;
-    height: 400px;
+    /* width: 600px;
+    height: 400px; */
     border-radius: 10px;
 }
 
 .right-arrow {
     position: absolute;
-    top: 50%;
+    top: 47%;
     right: 160px;
     font-size: 3rem;
     color: #927be2;
@@ -26,7 +26,7 @@
 
 .left-arrow {
     position: absolute;
-    top: 50%;
+    top: 47%;
     left: 160px;
     font-size: 3rem;
     color: #927be2;
@@ -37,11 +37,11 @@
 
 .slide {
     opacity: 0;
-    transition-duration: 1s ease;
+    transition-duration: 1s ease-in-out;
 }
 
 .slide.active {
     opacity: 1;
-    transition-duration: 1s;
-    transform: scale(1.08);
+    transition-duration: 1.5s;
+    transform: scale(1.20);
 }
