--- a/frontend/showpage-client/src/components/navbar/NavBar.css
+++ b/frontend/showpage-client/src/components/navbar/NavBar.css
@@ -130,7 +130,7 @@
         margin: 2rem auto;
         border-radius: 4px;
         width: 80%;
-        background: #927be2;
+        background: rgb(44, 43, 54)2;
         text-decoration: none;
         color: #fff;
         font-size: 1.5rem;
