--- a/frontend/showpage-client/src/components/Internal.css
+++ b/frontend/showpage-client/src/components/Internal.css
@@ -175,6 +175,27 @@
 
 /* QUOTES: START */
 
+/* QUOTE SECTION: START */
+.quote-sec-one {
+    margin-bottom: 190px;
+}
+
+.quote-sec-two {
+    margin-bottom: 150px;
+}
+.quote-sec-three {
+    margin-bottom: 60px;
+}
+
+.quote-sec-four {
+    margin-bottom: 145px;
+}
+
+.quote-sec-five {
+    margin-bottom: 190px;
+}
+/* QUOTE SECTION: END */
+
 .quote-box {
     margin : 20px auto; 
     padding : 20px; 
@@ -193,14 +214,12 @@
   position : relative; 
 } 
 
-
-
 .quote-style blockquote {
   padding-top : 150px; 
 } 
 
 .quote-style blockquote:after {
-    background: none repeat scroll 0 0 rgba(235, 150, 108, 0.8);
+    background: none repeat scroll 0 0 rgba(139, 106, 230, 0.8);
     border-radius: 50% 50% 50% 50%;
     color: rgba(255, 255, 255, 0.5);
     content: "❞";
@@ -216,8 +235,9 @@
     top: 0;
     width: 130px;
 }
+
 .quote-style blockquote:before {
-    border-left: 5px solid rgba(235, 150, 108, 0.1);
+    border-left: 5px solid rgba(163, 108, 235, 0.1);
     border-radius: 50% 50% 50% 50%;
     content: "";
     height: 500px;
@@ -226,22 +246,23 @@
     top: 0;
     width: 500px;
     z-index: -1;
+    margin-bottom: 200px;
 }
 
 .quote-style blockquote p {
   background : none repeat scroll 0 0 rgba(255, 255, 255, 0.5); 
-  box-shadow : 0 -6px 0 rgba(235, 150, 108, 0.2); 
-  color : rgba(235, 150, 108, 0.8); 
+  box-shadow : 0 -6px 0 rgba(142, 108, 235, 0.2); 
+  color : rgba(116, 54, 187, 0.8); 
   display : inline; 
   font-family : Baskerville, Georgia, serif; 
   font-style : italic; 
   font-size : 28px; 
   line-height : 46px; 
-  text-shadow : 0 1px 1px rgba(255, 255, 255, 0.5);  
+  text-shadow : 0 1px 1px rgba(0, 0, 0, 0.5);  
 } 
 
  .quote-author {
-  color : #D48158; 
+  color : #7356c2; 
   font-size : 18px; 
   font-weight : bold; 
   padding-top : 10px; 
@@ -249,73 +270,5 @@
   text-transform : uppercase; 
   text-align: center;
 }  
-
-
-
-
-
-
-/* .quote-box {
-    margin : 20px auto 200px; 
-    padding : 20px; 
-    position : relative; 
-    width : 300px;
-    padding-top : 150px; 
-}
-
-.quote-q {
-    color: white;
-    background : none repeat scroll 0 0 rgba(255, 255, 255, 0.5); 
-    box-shadow : 0 -6px 0 rgba(235, 150, 108, 0.2); 
-    color : rgba(235, 150, 108, 0.8); 
-    display : inline; 
-    font-family : Baskerville, Georgia, serif; 
-    font-style : italic; 
-    font-size : 28px; 
-    line-height : 46px; 
-    text-shadow : 0 1px 1px rgba(255, 255, 255, 0.5);  
-    margin: 0;
-    padding: 0;
-}
-
-q::before {
-    border-left: 5px solid rgba(235, 150, 108, 0.1);
-    border-radius: 50% 50% 50% 50%;
-    content: "";
-    height: 500px;
-    left: -50px;
-    position: absolute;
-    top: 0;
-    width: 500px;
-    z-index: -1;
-}
-
-q::after {
-    background: none repeat scroll 0 0 rgba(235, 150, 108, 0.8);
-    border-radius: 50% 50% 50% 50%;
-    color: rgba(255, 255, 255, 0.5);
-    content: "❞";
-    font-family: 'icons';
-    font-size: 70px;
-    height: 130px;
-    left: 50%;
-    line-height: 130px;
-    margin-left: -65px;
-    position: absolute;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
-    top: 0;
-    width: 130px;
-}
-
-.quote-author {
-    color : #D48158; 
-    font-size : 18px; 
-    font-weight : bold; 
-    padding-top : 10px; 
-    text-shadow : 0 1px 1px rgba(255, 255, 255, 0.1); 
-    text-transform : uppercase; 
-    text-align: center;
-} */
 
 /* QUOTES: END */
