--- a/frontend/showpage-client/src/slider/Slider.css
+++ b/frontend/showpage-client/src/slider/Slider.css
@@ -1,15 +1,15 @@
+
 .slider {
     position: relative;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50px;
+    margin-top: -70px;
+    margin-bottom: -70px;
 }
 
 .image {
-    /* width: 600px;
-    height: 400px; */
     border-radius: 10px;
 }
 
