--- a/frontend/showpage-client/src/components/Internal.css
+++ b/frontend/showpage-client/src/components/Internal.css
@@ -122,26 +122,29 @@
 }
 
 @keyframes ani {
-        0% {
-            transform: translate3d(0, 0, 0);
-            text-shadow: 0em 0em 0 rgba(157, 149, 228, 0.616);
-            color: black;
-       }
-        30% {
-            transform: translate3d(0, 0, 0);
-            text-shadow: 0em 0em 0 rgb(157, 149, 228, 0.616);
-            color: black;
-       }
-        70% {
-            transform: translate3d(0.08em, -0.08em, 0);
-            text-shadow: -0.08em 0.08em rgb(157, 149, 228, 0.616);
-            color: black;
-       }
-        100% {
-            transform: translate3d(0.08em, -0.08em, 0);
-            text-shadow: -0.08em 0.08em rgb(157, 149, 228, 0.616);
-            color: black;
-       }
+    0% {
+        transform: translate3d(0, 0, 0);
+        text-shadow: 0em 0em 0 rgba(157, 149, 228, 0.616);
+        color: black;
+    }
+
+    30% {
+        transform: translate3d(0, 0, 0);
+        text-shadow: 0em 0em 0 rgb(157, 149, 228, 0.616);
+        color: black;
+    }
+
+    70% {
+        transform: translate3d(0.08em, -0.08em, 0);
+        text-shadow: -0.08em 0.08em rgb(157, 149, 228, 0.616);
+        color: black;
+    }
+
+    100% {
+        transform: translate3d(0.08em, -0.08em, 0);
+        text-shadow: -0.08em 0.08em rgb(157, 149, 228, 0.616);
+        color: black;
+    }
 }
 
 .wacky-line span {
@@ -274,7 +277,8 @@
 
 /* START: TINY LINK */
 .tiny-link {
-  margin: 60px 25%
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
-
 /* END: TINY LINK */
