--- a/frontend/showpage-client/src/components/Internal.css
+++ b/frontend/showpage-client/src/components/Internal.css
@@ -7,6 +7,20 @@
 }
 /* END STANDARD */
 
+/* ABOUT ME STRONG TAG: START */
+.classic-about strong {
+    font-size: 1.1em;
+    text-shadow: 1px 2px 3px grey;
+}
+/* ABOUT ME STRONG TAG: END */
+
+/* ABOUT ME A TAG: START */
+/* .classic-about a {
+    text-decoration: none;
+    color: grey;
+} */
+/* ABOUT ME A TAG: END */
+
 
 /* START CONTACT  */
 .classic-contact {
@@ -165,15 +179,6 @@
     animation-delay: -0.5s;
 }
 /* WACKY LINE CODE: END */
-
-
-/* ABOUT ME STRONG TAG: START */
-.classic-about strong {
-    font-size: 1.1em;
-    text-shadow: 1px 2px 3px grey;
-}
-/* ABOUT ME STRONG TAG: END */
-
 
 
 /* QUOTES: START */
