--- a/frontend/showpage-client/src/components/Internal.css
+++ b/frontend/showpage-client/src/components/Internal.css
@@ -284,6 +284,7 @@
 .tiny-link {
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+    width: 50%;
 }
 /* END: TINY LINK */
