--- a/src/components/Internal.css
+++ b/src/components/Internal.css
@@ -288,3 +288,26 @@
     width: 50%;
 }
 /* END: TINY LINK */
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 960px) {
+    .classic-about {
+        margin: 45px 190px;
+        text-align: left;
+        color: rgb(110, 94, 254);
+        font-size: 7pt;
+    }
+}
+
+
+
+
