--- a/src/components/Internal.css
+++ b/src/components/Internal.css
@@ -301,10 +301,10 @@
 
 @media screen and (max-width: 960px) {
     .classic-about {
-        margin: auto;
+        margin: 45px 10px;
         text-align: left;
         color: rgb(110, 94, 254);
-        font-size: 7pt;
+        font-size: 28px;
     }
 }
 
