--- a/src/components/Internal.css
+++ b/src/components/Internal.css
@@ -302,7 +302,7 @@
 @media screen and (max-width: 960px) {
     .classic-about {
         margin: 45px 16px;
-        text-align: left;
+        text-align: center;
         color: rgb(110, 94, 254);
         font-size: 24px;
     }
