centered React logo in navbar and fixed slider placement

--- a/src/slider/Slider.css
+++ b/src/slider/Slider.css
@@ -1,7 +1,7 @@
 
 .slider {
     position: relative;
-    /* height: 80vh; */
+    height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +18,7 @@
 .right-arrow {
     position: absolute;
     top: 45%;
-    right: 180px;
+    right: 25%;
     font-size: 3rem;
     color: #927be2;
     z-index: 10;
@@ -29,7 +29,7 @@
 .left-arrow {
     position: absolute;
     top: 45%;
-    left: 180px;
+    left: 25%;
     font-size: 3rem;
     color: #927be2;
     z-index: 10;
@@ -40,9 +40,11 @@
 @media screen and (max-width: 960px) { 
     .image {
         max-width: 100%; 
-        position: relative;
-        display: flex;
-        justify-content: center;
+    }
+
+    .slider {
+        margin-top: -30px;
+        margin-bottom: -30px;
     }
 
     .right-arrow { 
@@ -51,6 +53,10 @@
 
     .left-arrow {
         left: 16px;
+    }
+
+    .slide.active {
+        max-width: 70%;
     }
     
 }
