--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -103,8 +103,9 @@
 
     .navbar-logo {
         position: absolute;
+
         top: 0;
-        left: 0;
+        left: 22%;
         transform: translate(25%, 50%);
     }
 
