--- a/src/components/Internal.css
+++ b/src/components/Internal.css
@@ -59,7 +59,7 @@
 
 .link-div {
     margin: 40px 40% 40px 40%;
-    border: 2px solid black;
+    border: 2px solid rgb(110, 94, 254);
     text-align: center;
     border-radius: 10px;
 }
