--- a/src/slider/Slider.css
+++ b/src/slider/Slider.css
@@ -20,7 +20,7 @@
     top: 45%;
     right: 25%;
     font-size: 3rem;
-    color: #927be2;
+    color: #A87BE2;
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -31,7 +31,7 @@
     top: 45%;
     left: 25%;
     font-size: 3rem;
-    color: #927be2;
+    color: #A87BE2;
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -44,18 +44,16 @@
     }
 
     .slider {
-        margin-top: -30px;
-        margin-bottom: -30px;
         margin-top: 10px;
         margin-bottom: 10px;
     }
 
     .right-arrow { 
-        right: 16px;
+        right: 40px;
     }
 
     .left-arrow {
-        left: 16px;
+        left: 40px;
     }
 
     .slide.active {
